--- a/core/templates/login.html
+++ b/core/templates/login.html
@@ -1,26 +1,26 @@
 {% extends "base.html" %}
 
+{% load staticfiles %}
+
+{% block css %}
+    <link rel="stylesheet" href="{% static 'css/form.css' %}" type="text/css"/>
+{% endblock %}
+
 {% block body %}
 
 {% if form.errors %}
-<p>Your username and password didn't match. Please try again.</p>
+    {#  We use a custom error message as there are no non_field_errors for the login form  #}
+    <p class="errmsg_cumulative">Login failed. Please check your username and password try again.</p>
 {% endif %}
 
 <form method="post" action="{% url 'login' %}">
 {% csrf_token %}
-<table>
-<tr>
-    <td>{{ form.username.label_tag }}</td>
-    <td>{{ form.username }}</td>
-</tr>
-<tr>
-    <td>{{ form.password.label_tag }}</td>
-    <td>{{ form.password }}</td>
-</tr>
-</table>
+    {% for field in form %}
+        {% include "form_field.html" %}
+    {% endfor %}
 
-<input type="submit" value="login" />
-<input type="hidden" name="next" value="{{ next }}" />
+    <input type="submit" value="Log In"/>
+    <input type="hidden" name="next" value="{{ next }}" />
 </form>
 
 {% endblock %}
