--- a/hwcentral/templates/about.html
+++ b/hwcentral/templates/about.html
@@ -2,6 +2,10 @@
 
 {% load staticfiles %}
 
+{% block css %}
+    <link rel="stylesheet" href="{% static 'css/static_page_layout.css' %}" type="text/css"/>
+{% endblock %}
+
 {% block body %}
 
     <p class="intro">HomeWork Central was founded in the summer of 2013 by a group of young entrepreneurs committed to
