--- a/hwcentral/templates/index.html
+++ b/hwcentral/templates/index.html
@@ -4,6 +4,7 @@
 
 {% block css %}
     <link rel="stylesheet" href="{% static 'css/index.css' %}" type="text/css"/>
+    <link rel="stylesheet" href="{% static 'css/static_page_layout.css' %}" type="text/css"/>
 {% endblock %}
 
 {% block body %}
