--- a/hwcentral/templates/user_context_box.html
+++ b/hwcentral/templates/user_context_box.html
@@ -2,8 +2,8 @@
     {% if user.is_authenticated %}
         <span class="button"><a href="{% url 'logout' %}">Sign Out</a></span>
     {% else %}
-        <span class="button"><a href="{% url 'register' %}">Sign Up</a></span>
+        <span class="button"><a href="{% url 'register' %}">Register</a></span>
         <span class="separator"></span>
-        <span class="button"><a href="{% url 'login' %}">Sign In</a></span>
+        <span class="button"><a href="{% url 'login' %}">Log In</a></span>
     {% endif %}
 </span>
