--- a/hwcentral/templates/base.html
+++ b/hwcentral/templates/base.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="{% static 'css/base.css' %}" type="text/css"/>
 
     <link rel="stylesheet" href="{% static 'css/header/header.css' %}" type="text/css"/>
-    <link rel="stylesheet" href="{% static 'css/header/site_anchor.css' %}" type="text/css"/>
+    <link rel="stylesheet" href="{% static 'css/header/banner.css' %}" type="text/css"/>
     <link rel="stylesheet" href="{% static 'css/header/user_context_box.css' %}" type="text/css"/>
 
     <link rel="stylesheet" href="{% static 'css/footer/footer.css' %}" type="text/css"/>
