--- a/hwcentral/static/css/header/user_context_box.css
+++ b/hwcentral/static/css/header/user_context_box.css
@@ -2,7 +2,7 @@
     float: right;
 }
 
-#user_context_box .button {
+#user_context_box .action {
     padding: 5px;
     font-family: Futura;
     font-size: 1.2em;
