--- a/hwcentral/static/css/footer/footer.css
+++ b/hwcentral/static/css/footer/footer.css
@@ -1,9 +1,9 @@
 #footer {
     background-color: #141414;
-    padding: 25px 10px 10px;
+    padding: 10px;
     border: 2px solid #888888;
     border-top-width: 0;
-    border-radius: 5px;
+    border-radius: 0px 0px 5px 5px;
 }
 
 .footer_element {
