--- a/core/templates/login.html
+++ b/core/templates/login.html
@@ -4,7 +4,7 @@
 
 {% block css %}
     <link rel="stylesheet" href="{% static 'css/form.css' %}" type="text/css"/>
-{% endblock %}
+{% endblock css %}
 
 {% block body %}
 
@@ -23,4 +23,4 @@
     <input type="hidden" name="next" value="{{ next }}" />
 </form>
 
-{% endblock %}
+{% endblock body %}
