--- a/hwcentral/templates/index.html
+++ b/hwcentral/templates/index.html
@@ -4,7 +4,7 @@
 
 {% block css %}
     <link rel="stylesheet" href="{% static 'css/static_page_layout.css' %}" type="text/css"/>
-{% endblock %}
+{% endblock css%}
 
 {% block body %}
 
@@ -97,5 +97,5 @@
             conceptual learning.</p>
     </div>
 
-{% endblock %}
+{% endblock body %}
 
