--- a/hwcentral/templates/news.html
+++ b/hwcentral/templates/news.html
@@ -6,7 +6,7 @@
 
 {% block css %}
     <link rel="stylesheet" href="{% static 'css/news.css' %}" type="text/css"/>
-{% endblock %}
+{% endblock css %}
 
 {% block body %}
 
@@ -21,4 +21,4 @@
     </ol>
 
 
-{% endblock %}
+{% endblock body %}
