--- a/core/templates/register.html
+++ b/core/templates/register.html
@@ -4,7 +4,7 @@
 
 {% block css %}
     <link rel="stylesheet" href="{% static 'css/form.css' %}" type="text/css"/>
-{% endblock %}
+{% endblock css %}
 
 {% block body %}
 
@@ -24,5 +24,5 @@
         <input type="submit" value="Register"/>
     </form>
 
-{% endblock %}
+{% endblock body %}
 
