--- a/hwcentral/templates/about.html
+++ b/hwcentral/templates/about.html
@@ -4,7 +4,7 @@
 
 {% block css %}
     <link rel="stylesheet" href="{% static 'css/static_page_layout.css' %}" type="text/css"/>
-{% endblock %}
+{% endblock css %}
 
 {% block body %}
 
@@ -50,4 +50,4 @@
             very familiar with the system and also has previous experience in teaching roles.</p>
     </div>
 
-{% endblock %}
+{% endblock body %}
