--- a/hwcentral/templates/base.html
+++ b/hwcentral/templates/base.html
@@ -7,12 +7,12 @@
 
     <!-- Title -->
 
-    <title>{% block title %}HW Central{% endblock %}</title>
+    <title>{% block title %}HW Central{% endblock title %}</title>
 
     <!-- Meta -->
 
     {% include "base_meta.html" %}
-    {% block meta %}{% endblock %}
+    {% block meta %}{% endblock meta %}
 
     <!-- Favicon -->
 
@@ -31,7 +31,7 @@
     <link rel="stylesheet" href="{% static 'css/footer/additional_info_box.css' %}" type="text/css"/>
 
     <link rel="stylesheet" href="{% static 'css/chosen/chosen.css' %}" type="text/css"/>
-    {% block css %}{% endblock %}
+    {% block css %}{% endblock css %}
 
 </head>
 
@@ -42,26 +42,26 @@
 
     {% block header %}
         {% include "header.html" %}
-    {% endblock %}
+    {% endblock header %}
 
     <!-- Body -->
 
     <div id="body">
-        {% block body %}{% endblock %}
+        {% block body %}{% endblock body %}
     </div>
 
     <!-- Footer -->
 
     {% block footer %}
         {% include "footer.html" %}
-    {% endblock %}
+    {% endblock footer %}
 
     <!-- Scripts -->
 
     <script type="text/javascript" src="{% static 'js/jquery.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/chosen/chosen.jquery.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/base.js' %}"></script>
-    {% block js %}{% endblock %}
+    {% block js %}{% endblock js %}
 
 </div>
 </body>
