--- a/hwcentral/templates/contact.html
+++ b/hwcentral/templates/contact.html
@@ -6,7 +6,7 @@
 
 {% block css %}
     <link rel="stylesheet" href="{% static 'css/static_page_layout.css' %}" type="text/css"/>
-{% endblock %}
+{% endblock css %}
 
 {% block body %}
 
@@ -14,4 +14,4 @@
         email at <a class="email" href="mailto:contact@hwcentral.in">contact@hwcentral.in</a> and we will get back to
         you as soon as possible.</p>
 
-{% endblock %}
+{% endblock body %}
