--- a/core/templates/authenticated/home.html
+++ b/core/templates/authenticated/home.html
@@ -1,7 +1,9 @@
 {% extends "authenticated/base.html" %}
 
+{% load staticfiles %}
+
 {% block authenticated_body_css %}
-    <link rel="stylesheet" href="{% static "css/home/admin.css" %}" type="text/css"/>
+    <link rel="stylesheet" href="{% static "css/home.css" %}" type="text/css"/>
 {% endblock authenticated_body_css %}
 
 {% block authenticated_body %}
