--- a/core/templates/authenticated/sidebar/listings.html
+++ b/core/templates/authenticated/sidebar/listings.html
@@ -1,6 +1,6 @@
 {% for listing in vm.sidebar.listings %}
     <div class="listing">
-        <div class="listing_title ignore_left_padding">{{ listing.title }}</div>
+        <div class="listing_title">{{ listing.title }}</div>
         {% for element in listing.elements %}
             <div class="listing_element">
                 <a href="{% url listing.url_name element.id %}">{{ element.label }}</a>
