--- a/core/templates/authenticated/sidebar/listings.html
+++ b/core/templates/authenticated/sidebar/listings.html
@@ -3,7 +3,7 @@
         <div class="listing_title">{{ listing.title }}</div>
         {% for element in listing.elements %}
             <div class="listing_element">
-                <a href="{% url listing.url_name element.id %}">{{ element.label }}</a>
+                <a href="{% url listing.urlname element.id %}">{{ element.label }}</a>
             </div>
         {% endfor %}
     </div>
