--- a/hwcentral/static/css/footer/footer.css
+++ b/hwcentral/static/css/footer/footer.css
@@ -1,12 +1,16 @@
 #footer {
-    background-color: #141414;
+    background-color: #000;
     padding: 10px;
-    border: 2px solid #888888;
+    /*border: 2px solid #888888;
     border-top-width: 0;
-    border-radius: 0px 0px 5px 5px;
+    border-radius: 0px 0px 5px 5px;*/
 }
 
 .footer_element {
-    color: #A7A7A7;
+    color: #aaa !important;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.copysym{
+    color: #aaa !important;
 }
