--- a/core/templates/login.html
+++ b/core/templates/login.html
@@ -4,7 +4,7 @@
 
 {% block css %}
     <link rel="stylesheet" href="{% static 'css/form.css' %}" type="text/css"/>
-    <link rel="stylesheet" href="{% static 'css/landing_page.css' %}" type="text/css"/>
+    <link rel="stylesheet" href="{% static 'css/index.css' %}" type="text/css"/>
 {% endblock css %}
 
 {% block body %}
@@ -13,23 +13,24 @@
 
     <div class="indexsum">
         <div class="logindiv">
-        <!--- Start Code for Log In ---->
+            <!--- Start Code for Log In ---->
+
             {% if form.errors %}
                 {#  We use a custom error message as there are no non_field_errors for the login form  #}
                 <p class="errmsg_cumulative">Login failed. Please check your username and password try again.</p>
             {% endif %}
 
             <form method="post" action="{% url 'login' %}">
-            {% csrf_token %}
+                {% csrf_token %}
                 {% for field in form %}
                     {% include "form_field.html" %}
                 {% endfor %}
 
                 <input type="submit" value="Log In"/>
-                <input type="hidden" name="next" value="{{ next }}" />
+                <input type="hidden" name="next" value="{{ next }}"/>
             </form>
-        <!--- End Code for Log In ---->
 
+            <!--- End Code for Log In ---->
         </div>
     </div>
 
