--- a/hwcentral/templates/index.html
+++ b/hwcentral/templates/index.html
@@ -3,8 +3,7 @@
 {% load staticfiles %}
 
 {% block css %}
-    <link rel="stylesheet" href="{% static 'css/static_page_layout.css' %}" type="text/css"/>
-    <link rel="stylesheet" href="{% static 'css/landing_page.css' %}" type="text/css"/>
+    <link rel="stylesheet" href="{% static 'css/index.css' %}" type="text/css"/>
 {% endblock css%}
 
 
