--- a/core/static/css/sidebar.css
+++ b/core/static/css/sidebar.css
@@ -1,7 +1,6 @@
 #sidebar {
     width: 160px;
     background-color: #000;
-    /*border-right: 2px solid #888888;*/
     margin-left: -20px;
     padding-top: 20px;
     padding-bottom: 20px;
@@ -26,17 +25,17 @@
 
 #sidebar #userinfo .userinfo_element label {
     font-family: Futura, sans-serif;
-    color: rgb(125,125,125);
+    color: rgb(125, 125, 125);
 }
 
 #sidebar #userinfo .userinfo_element div {
     font-family: Menlo;
-    margin-left:15px;
+    margin-left: 15px;
     color: #aaaaaa;
 }
 
 #sidebar a:hover {
-    color: rgb(0,0,0);
+    color: rgb(0, 0, 0);
 }
 
 #sidebar .listing {
@@ -49,23 +48,15 @@
     border-bottom: 2px solid #000000;
     border-top: 2px solid #000000;
     background-color: #ffffff;
-}
-
-#sidebar #settings {
-    padding-top: 10px;
-    border-top: 2px solid #000000;
-}
-
-#sidebar .listing_title, #sidebar #settings {
     margin-left: 0px;
     margin-right: -5px;
     padding: 5px;
-    padding-left:14px;
+    padding-left: 14px;
 }
 
 #sidebar .listing_element {
     padding-top: 5px;
     padding-bottom: 5px;
-    color:#ffffff;
-    margin-left:15px;
+    color: #ffffff;
+    margin-left: 15px;
 }
