--- a/core/templates/authenticated/sidebar/sidebar.html
+++ b/core/templates/authenticated/sidebar/sidebar.html
@@ -1,8 +1,14 @@
 <div id="sidebar">
     <div id="userinfo">
-        <div class="userinfo_element"><div><a href="{% url vm.sidebar.fullname_urlname %}">{{ vm.sidebar.user_fullname }}</a></div></div>
-        <div class="userinfo_element"><div>{{ vm.sidebar.user_groupname }}</div></div>
-        <div class="userinfo_element"><div><a href="{% url vm.sidebar.school_urlname %}">{{ vm.sidebar.user_school }}</a></div></div>
+        <div class="userinfo_element">
+            <div><a href="{% url vm.sidebar.fullname_urlname %}">{{ vm.sidebar.user_fullname }}</a></div>
+        </div>
+        <div class="userinfo_element">
+            <div>{{ vm.sidebar.user_groupname }}</div>
+        </div>
+        <div class="userinfo_element">
+            <div><a href="{% url vm.sidebar.school_urlname %}">{{ vm.sidebar.user_school }}</a></div>
+        </div>
         {% if vm.sidebar.ticker %}
             <div class="userinfo_element"><label>{{ vm.sidebar.ticker.label }}:</label>
 
@@ -13,5 +19,4 @@
     <div id="listings">
         {% include "authenticated/sidebar/listings.html" %}
     </div>
-    <!---div id="settings"><a href="{% url vm.sidebar.settings_urlname %}">Account Settings</a></div---->
 </div>
