--- a/core/templates/register.html
+++ b/core/templates/register.html
@@ -4,7 +4,7 @@
 
 {% block css %}
     <link rel="stylesheet" href="{% static 'css/form.css' %}" type="text/css"/>
-    <link rel="stylesheet" href="{% static 'css/landing_page.css' %}" type="text/css"/>
+    <link rel="stylesheet" href="{% static 'css/index.css' %}" type="text/css"/>
 {% endblock css %}
 
 {% block body %}
@@ -13,7 +13,7 @@
 
     <div class="indexsum">
         <div class="regdiv">
-        <!--- Start Code for Registration ---->
+            <!--- Start Code for Registration ---->
 
             {% if user_form.errors or user_info_form.errors %}
                 {#  We use a custom error message as there are no non_field_errors for the registration form  #}
@@ -31,7 +31,7 @@
                 <input type="submit" value="Register"/>
             </form>
 
-        <!--- End Code for Registration ---->
+            <!--- End Code for Registration ---->
         </div>
     </div>
 
