Updated DB password

--- a/core/templates/authenticated/home/student.html
+++ b/core/templates/authenticated/home/student.html
@@ -18,42 +18,43 @@
         <div class="scroll">
             <table class="announcebox" cellspacing='0'> <!-- cellspacing='0' is important, must stay -->
                 <tbody>
-                <tr>
-                    <td><b>Seema Swami</b><br>12/12/2014<br><br>
-                        <!---Start Message Body--->
-                        This is a test message. Real messages can be as long as they need to be. This could be a
-                        reminder that assignment is due or a clarification on a question. It could also be information
-                        about an extension.
-                        <!--End Message Body -->
-                    </td>
-                </tr>
-                <tr class="even">
-                    <td><b>Seema Swami</b><br>12/12/2014<br><br>
-                        <!---Start Message Body--->
-                        This is a test message. Real messages can be as long as they need to be. This could be a
-                        reminder that assignment is due or a clarification on a question. It could also be information
-                        about an extension.
-                        <!--End Message Body -->
-                    </td>
-                </tr>
-                <tr>
-                    <td><b>Seema Swami</b><br>12/12/2014<br><br>
-                        <!---Start Message Body--->
-                        This is a test message. Real messages can be as long as they need to be. This could be a
-                        reminder that assignment is due or a clarification on a question. It could also be information
-                        about an extension.
-                        <!--End Message Body -->
-                    </td>
-                </tr>
-                <tr class="even">
-                    <td><b>Seema Swami</b><br>12/12/2014<br><br>
-                        <!---Start Message Body--->
-                        This is a test message. Real messages can be as long as they need to be. This could be a
-                        reminder that assignment is due or a clarification on a question. It could also be information
-                        about an extension.
-                        <!--End Message Body -->
-                    </td>
-                </tr>
+                    <tr>
+                        <td><b>Seema Swami</b><br>12/12/2014<br><br>
+                            <!---Start Message Body--->
+                            This is a test message. Real messages can be as long as they need to be. This could be a
+                            reminder that assignment is due or a clarification on a question. It could also be information
+                            about an extension.
+                            <!--End Message Body -->
+                        </td>
+                    </tr>
+                    <tr class="even">
+                        <td><b>Seema Swami</b><br>12/12/2014<br><br>
+                            <!---Start Message Body--->
+                            This is a test message. Real messages can be as long as they need to be. This could be a
+                            reminder that assignment is due or a clarification on a question. It could also be information
+                            about an extension.
+                            <!--End Message Body -->
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><b>Seema Swami</b><br>12/12/2014<br><br>
+                            <!---Start Message Body--->
+                            This is a test message. Real messages can be as long as they need to be. This could be a
+                            reminder that assignment is due or a clarification on a question. It could also be information
+                            about an extension.
+                            <!--End Message Body -->
+                        </td>
+                    </tr>
+                    <tr class="even">
+                        <td><b>Seema Swami</b><br>12/12/2014<br><br>
+                            <!---Start Message Body--->
+                            This is a test message. Real messages can be as long as they need to be. This could be a
+                            reminder that assignment is due or a clarification on a question. It could also be information
+                            about an extension.
+                            <!--End Message Body -->
+                        </td>
+                    </tr>
+                </tbody>
             </table>
         </div>
     </div>
